k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: free-faker-mcp
  namespace: free
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: free.cadenya.com
      http:
        paths:
          - path: /faker-mcp(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: free-faker-mcp
                port:
                  number: 80
